--- a/TradingCompany_v2/TradingCompany.WPF/Views/User/LoginView.xaml
+++ b/TradingCompany_v2/TradingCompany.WPF/Views/User/LoginView.xaml
@@ -4,21 +4,37 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" 
-             Height="300" Width="400">
+             Height="350" Width="400">
     <Border Background="White" CornerRadius="10" Padding="20">
+        
         <StackPanel VerticalAlignment="Center">
             <TextBlock Text="Welcome" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,0,0,20"/>
 
             <TextBlock Text="Login"/>
-            <TextBox Text="{Binding Login, UpdateSourceTrigger=PropertyChanged}" Margin="0,5,0,10" Padding="5"/>
+            <TextBox Text="{Binding Login.Login, UpdateSourceTrigger=PropertyChanged}" Margin="0,5,0,10" Padding="5"/>
 
             <TextBlock Text="Password"/>
             <PasswordBox x:Name="txtPassword" Margin="0,5,0,20" Padding="5"/>
+
+            <TextBlock Text="{Binding ErrorMessage}" 
+                       Foreground="Red" 
+                       HorizontalAlignment="Center" 
+                       Margin="0,0,0,10"/>
 
             <Button Content="Login in" 
                     Command="{Binding LoginCommand}" 
                     CommandParameter="{Binding ElementName=txtPassword}"
                     Height="35" Background="#007ACC" Foreground="White"/>
+
+            <TextBlock Text="Don't have an account?" 
+                       HorizontalAlignment="Center" 
+                       Margin="0,20,0,5"/>
+
+            <Button Content="Register"
+                    Command="{Binding RegistrationCommand}"
+                    HorizontalAlignment="Center"
+                    Background="#007ACC" Foreground="White"/>
+
         </StackPanel>
     </Border>
 </UserControl>
